Bug 1676409 - Attempt to resolve CrossProcessPaint objects for printing immediately, in case we didn't queue any dependencies. r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D104782